lustre-collector/src/oss/snapshots/lustre_collector__oss__client_count_parser__test__client_count_parser_two_client.snap
---
source: lustre-collector/src/oss/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0000",
                    ),
                    value: 2,
                },
            ),
        ),
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0001",
                    ),
                    value: 2,
                },
            ),
        ),
    ],
    "",
)
