lustre-collector/src/oss/snapshots/lustre_collector__oss__client_count_parser__test__client_count_parser_zero_clients.snap
---
source: lustre-collector/src/oss/client_count_parser.rs
expression: result
---
(
    [
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0000",
                    ),
                    value: 0,
                },
            ),
        ),
        Target(
            ConnectedClients(
                TargetStat {
                    kind: Ost,
                    param: Param(
                        "connected_clients",
                    ),
                    target: Target(
                        "fs-OST0001",
                    ),
                    value: 0,
                },
            ),
        ),
    ],
    "",
)
