lustre-collector/src/oss/snapshots/lustre_collector__oss__client_count_parser__test__interface_clients.snap
---
source: lustre-collector/src/oss/client_count_parser.rs
expression: result
---
(
    (
        "fs-OST0000",
        1,
    ),
    "",
)
